tests/baselines/reference/binaryArithmatic4.errors.txt
==== tests/cases/compiler/binaryArithmatic4.ts (2 errors) ====
    var v = null | null;
            ~~~~
!!! binaryArithmatic4.ts(1,9): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
                   ~~~~
!!! binaryArithmatic4.ts(1,16): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.